--- a/Rainfall/Calendar/QuriesTableViewCell.xib
+++ b/Rainfall/Calendar/QuriesTableViewCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,7 +18,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="QuriesTableViewCell" customModule="Rainfall" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuriesTableViewCell" id="KGk-i7-Jjw" customClass="QuriesTableViewCell" customModule="Rainfall" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -25,32 +26,33 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRv-gw-lnN">
-                        <rect key="frame" x="20" y="10" width="12" height="12"/>
-                        <color key="backgroundColor" red="0.31764705879999999" green="0.1764705882" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="5" y="12" width="6" height="6"/>
+                        <color key="backgroundColor" red="0.1450980392" green="0.1450980392" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="12" id="2Cx-5T-po8"/>
-                            <constraint firstAttribute="height" constant="12" id="bOG-oo-z8u"/>
+                            <constraint firstAttribute="width" constant="6" id="2Cx-5T-po8"/>
+                            <constraint firstAttribute="height" constant="6" id="bOG-oo-z8u"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="6"/>
+                                <integer key="value" value="3"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in." lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqv-GT-jOU">
-                        <rect key="frame" x="43" y="10" width="261" height="30"/>
+                        <rect key="frame" x="28" y="9" width="276" height="30.5"/>
                         <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="14"/>
                         <color key="textColor" red="0.1450980392" green="0.1450980392" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="dqv-GT-jOU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="4Sd-pc-9lP"/>
-                    <constraint firstItem="zRv-gw-lnN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Cjr-8I-kSI"/>
-                    <constraint firstItem="zRv-gw-lnN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Xi0-fP-TQx"/>
+                    <constraint firstItem="dqv-GT-jOU" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.7" id="4Eb-0N-fKV"/>
+                    <constraint firstItem="dqv-GT-jOU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="4Sd-pc-9lP"/>
+                    <constraint firstItem="zRv-gw-lnN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Cjr-8I-kSI"/>
+                    <constraint firstItem="zRv-gw-lnN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Xi0-fP-TQx"/>
                     <constraint firstAttribute="trailing" secondItem="dqv-GT-jOU" secondAttribute="trailing" constant="16" id="tza-bs-izy"/>
                     <constraint firstItem="dqv-GT-jOU" firstAttribute="leading" secondItem="zRv-gw-lnN" secondAttribute="leading" constant="23" id="vfV-33-fzh"/>
                 </constraints>
