--- a/Rainfall/Controllers/CalendarViewController.xib
+++ b/Rainfall/Controllers/CalendarViewController.xib
@@ -65,6 +65,9 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="weekdayHeight">
                             <real key="value" value="44"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="headerMinimumDissolvedAlpha">
+                            <real key="value" value="0.0"/>
+                        </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="7Wq-vf-aM1"/>
