--- a/Rainfall/CustomTableCells/CalendarTableViewCell.xib
+++ b/Rainfall/CustomTableCells/CalendarTableViewCell.xib
@@ -17,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CalendarTableViewCell" rowHeight="78" id="KGk-i7-Jjw" customClass="CalendarTableViewCell" customModule="Rainfall" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CalendarTableViewCell" rowHeight="78" id="KGk-i7-Jjw" customClass="CalendarTableViewCell" customModule="Rainfall" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -71,6 +71,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="timestampLbl" destination="rW7-B5-BTL" id="eXw-Nr-zIM"/>
+                <outlet property="titeLbl" destination="KsL-yb-xB2" id="nKm-MB-NOn"/>
                 <outlet property="verticalLineBig" destination="vlE-wl-ixS" id="KMT-Wa-Xff"/>
                 <outlet property="verticalLineSmall" destination="m9h-my-sZG" id="9IJ-nT-19h"/>
             </connections>
